--- a/atividade18-04/style.css
+++ b/atividade18-04/style.css
@@ -1,7 +1,10 @@
-/* style.css */
+button {
+    background-color:#0074d9}
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color:#f4f4f4;
 }
 
 .container {
@@ -11,7 +14,7 @@ body {
 }
 
 .header, .footer {
-    background-color: #f0f0f0;
+    background-color: #333;
     padding: 10px;
     text-align: center;
 }
